Fix header alignment in letters

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -58,6 +58,10 @@ q{
 	text-align: right;
 }
 
+[epub|type~="z3998:letter"] header p[epub|type~="se:letter.dateline"] + p{
+	text-align: initial;
+}
+
 footer{
 	margin-top: 1em;
 	text-align: right;
